Alignment issue w/ alpha buttons on some small android phones;

--- a/app/assets/stylesheets/theme/_contactually.scss
+++ b/app/assets/stylesheets/theme/_contactually.scss
@@ -88,6 +88,9 @@
   }
 }
 .alpha {
+  &--button-group {
+    text-align: right;
+  }
   &--button {
     @extend %button-ui;
     border: 0;
